@@ -28,6 +28,7 @@ import org.apache.kafka.common.test.ClusterInstance;
 import org.apache.kafka.common.test.api.ClusterConfigProperty;
 import org.apache.kafka.common.test.api.ClusterTest;
 import org.apache.kafka.common.test.api.ClusterTestDefaults;
+import org.apache.kafka.common.utils.Exit;
 
 import org.mockito.ArgumentCaptor;
 import org.mockito.MockedStatic;
@@ -37,7 +38,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -49,8 +49,6 @@ import java.util.concurrent.ExecutionException;
 
 import scala.jdk.javaapi.CollectionConverters;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -76,20 +74,20 @@ public class LeaderElectionCommandTest {
     public void testAllTopicPartition() throws InterruptedException, ExecutionException {
         String topic = "unclean-topic";
         int partition = 0;
-        List<Integer> assignment = asList(broker2, broker3);
+        List<Integer> assignment = List.of(broker2, broker3);
 
         cluster.waitForReadyBrokers();
         try (Admin client = cluster.admin()) {
 
-            createTopic(client, topic, Collections.singletonMap(partition, assignment));
+            createTopic(client, topic, Map.of(partition, assignment));
 
             TopicPartition topicPartition = new TopicPartition(topic, partition);
 
             TestUtils.assertLeader(client, topicPartition, broker2);
             cluster.shutdownBroker(broker3);
             TestUtils.waitForBrokersOutOfIsr(client,
-                    CollectionConverters.asScala(singletonList(topicPartition)).toSet(),
-                    CollectionConverters.asScala(singletonList(broker3)).toSet()
+                    CollectionConverters.asScala(List.of(topicPartition)).toSet(),
+                    CollectionConverters.asScala(List.of(broker3)).toSet()
             );
             cluster.shutdownBroker(broker2);
             TestUtils.assertNoLeader(client, topicPartition);
@@ -107,7 +105,32 @@ public class LeaderElectionCommandTest {
     }
 
     @ClusterTest
-    public void testAdminConfigCustomTimeouts() throws Exception {
+    public void testDeprecatedAdminConfig() throws Exception {
+        String defaultApiTimeoutMs = String.valueOf(110000);
+        String requestTimeoutMs = String.valueOf(55000);
+        Path adminConfigPath = tempAdminConfig(defaultApiTimeoutMs, requestTimeoutMs);
+
+        try (final MockedStatic<Admin> mockedAdmin = Mockito.mockStatic(Admin.class)) {
+            String output = ToolsTestUtils.captureStandardOut(() -> {
+                LeaderElectionCommand.mainNoExit(
+                    "--bootstrap-server", cluster.bootstrapServers(),
+                    "--election-type", "unclean", "--all-topic-partitions",
+                    "--admin.config", adminConfigPath.toString()
+                );
+            });
+            assertTrue(output.contains("Option --admin.config has been deprecated and will be removed in a future version. Use --command-config instead."));
+
+            ArgumentCaptor<Properties> argumentCaptor = ArgumentCaptor.forClass(Properties.class);
+            mockedAdmin.verify(() -> Admin.create(argumentCaptor.capture()));
+            // verify that properties provided to admin client are the overridden properties
+            final Properties actualProps = argumentCaptor.getValue();
+            assertEquals(requestTimeoutMs, actualProps.get(AdminClientConfig.REQUEST_TIMEOUT_MS_CONFIG));
+            assertEquals(defaultApiTimeoutMs, actualProps.get(AdminClientConfig.DEFAULT_API_TIMEOUT_MS_CONFIG));
+        }
+    }
+
+    @ClusterTest
+    public void testCommandConfig() throws Exception {
         String defaultApiTimeoutMs = String.valueOf(110000);
         String requestTimeoutMs = String.valueOf(55000);
         Path adminConfigPath = tempAdminConfig(defaultApiTimeoutMs, requestTimeoutMs);
@@ -116,12 +139,11 @@ public class LeaderElectionCommandTest {
             assertEquals(1, LeaderElectionCommand.mainNoExit(
                 "--bootstrap-server", cluster.bootstrapServers(),
                 "--election-type", "unclean", "--all-topic-partitions",
-                "--admin.config", adminConfigPath.toString()
+                "--command-config", adminConfigPath.toString()
             ));
 
             ArgumentCaptor<Properties> argumentCaptor = ArgumentCaptor.forClass(Properties.class);
             mockedAdmin.verify(() -> Admin.create(argumentCaptor.capture()));
-
             // verify that properties provided to admin client are the overridden properties
             final Properties actualProps = argumentCaptor.getValue();
             assertEquals(actualProps.get(AdminClientConfig.REQUEST_TIMEOUT_MS_CONFIG), requestTimeoutMs);
@@ -130,14 +152,40 @@ public class LeaderElectionCommandTest {
     }
 
     @ClusterTest
+    public void testCommandConfigAndDeprecatedConfigPresent() throws Exception {
+        String defaultApiTimeoutMs = String.valueOf(110000);
+        String requestTimeoutMs = String.valueOf(55000);
+        Path adminConfigPath = tempAdminConfig(defaultApiTimeoutMs, requestTimeoutMs);
+
+        try (final MockedStatic<Admin> mockedAdmin = Mockito.mockStatic(Admin.class)) {
+            // Mock Exit because CommandLineUtils.checkInvalidArgs calls exit
+            Exit.setExitProcedure(new ToolsTestUtils.MockExitProcedure());
+
+            String output = ToolsTestUtils.captureStandardErr(() -> {
+                LeaderElectionCommand.mainNoExit(
+                    "--bootstrap-server", "localhost:9092",
+                    "--election-type", "unclean", "--all-topic-partitions",
+                    "--admin.config", adminConfigPath.toString(),
+                    "--command-config", adminConfigPath.toString()
+                );
+            });
+
+            assertTrue(output.contains(String.format("Option \"%s\" can't be used with option \"%s\"",
+                "[admin.config]", "[command-config]")));
+        } finally {
+            Exit.resetExitProcedure();
+        }
+    }
+
+    @ClusterTest
     public void testTopicPartition() throws InterruptedException, ExecutionException {
         String topic = "unclean-topic";
         int partition = 0;
-        List<Integer> assignment = asList(broker2, broker3);
+        List<Integer> assignment = List.of(broker2, broker3);
 
         cluster.waitForReadyBrokers();
         try (Admin client = cluster.admin()) {
-            createTopic(client, topic, Collections.singletonMap(partition, assignment));
+            createTopic(client, topic, Map.of(partition, assignment));
 
             TopicPartition topicPartition = new TopicPartition(topic, partition);
 
@@ -145,8 +193,8 @@ public class LeaderElectionCommandTest {
 
             cluster.shutdownBroker(broker3);
             TestUtils.waitForBrokersOutOfIsr(client,
-                    CollectionConverters.asScala(singletonList(topicPartition)).toSet(),
-                    CollectionConverters.asScala(singletonList(broker3)).toSet()
+                    CollectionConverters.asScala(List.of(topicPartition)).toSet(),
+                    CollectionConverters.asScala(List.of(broker3)).toSet()
             );
             cluster.shutdownBroker(broker2);
             TestUtils.assertNoLeader(client, topicPartition);
@@ -168,7 +216,7 @@ public class LeaderElectionCommandTest {
     public void testPathToJsonFile() throws Exception {
         String topic = "unclean-topic";
         int partition = 0;
-        List<Integer> assignment = asList(broker2, broker3);
+        List<Integer> assignment = List.of(broker2, broker3);
 
         cluster.waitForReadyBrokers();
         Map<Integer, List<Integer>> partitionAssignment = new HashMap<>();
@@ -183,15 +231,15 @@ public class LeaderElectionCommandTest {
 
             cluster.shutdownBroker(broker3);
             TestUtils.waitForBrokersOutOfIsr(client,
-                    CollectionConverters.asScala(singletonList(topicPartition)).toSet(),
-                    CollectionConverters.asScala(singletonList(broker3)).toSet()
+                    CollectionConverters.asScala(List.of(topicPartition)).toSet(),
+                    CollectionConverters.asScala(List.of(broker3)).toSet()
             );
             cluster.shutdownBroker(broker2);
             TestUtils.assertNoLeader(client, topicPartition);
             cluster.startBroker(broker3);
             TestUtils.waitForOnlineBroker(client, broker3);
 
-            Path topicPartitionPath = tempTopicPartitionFile(singletonList(topicPartition));
+            Path topicPartitionPath = tempTopicPartitionFile(List.of(topicPartition));
 
             assertEquals(0, LeaderElectionCommand.mainNoExit(
                     "--bootstrap-server", cluster.bootstrapServers(),
@@ -207,7 +255,7 @@ public class LeaderElectionCommandTest {
     public void testPreferredReplicaElection() throws InterruptedException, ExecutionException {
         String topic = "preferred-topic";
         int partition = 0;
-        List<Integer> assignment = asList(broker2, broker3);
+        List<Integer> assignment = List.of(broker2, broker3);
 
         cluster.waitForReadyBrokers();
         try (Admin client = cluster.admin()) {
@@ -224,7 +272,7 @@ public class LeaderElectionCommandTest {
             TestUtils.assertLeader(client, topicPartition, broker3);
             cluster.startBroker(broker2);
             TestUtils.waitForBrokersInIsr(client, topicPartition,
-                    CollectionConverters.asScala(singletonList(broker2)).toSet()
+                    CollectionConverters.asScala(List.of(broker2)).toSet()
             );
 
             assertEquals(0, LeaderElectionCommand.mainNoExit(
@@ -254,8 +302,8 @@ public class LeaderElectionCommandTest {
         String topic = "non-preferred-topic";
         int partition0 = 0;
         int partition1 = 1;
-        List<Integer> assignment0 = asList(broker2, broker3);
-        List<Integer> assignment1 = asList(broker3, broker2);
+        List<Integer> assignment0 = List.of(broker2, broker3);
+        List<Integer> assignment1 = List.of(broker3, broker2);
 
         cluster.waitForReadyBrokers();
         TopicPartition topicPartition0;
@@ -277,14 +325,14 @@ public class LeaderElectionCommandTest {
             TestUtils.assertLeader(client, topicPartition0, broker3);
             cluster.startBroker(broker2);
             TestUtils.waitForBrokersInIsr(client, topicPartition0,
-                    CollectionConverters.asScala(singletonList(broker2)).toSet()
+                    CollectionConverters.asScala(List.of(broker2)).toSet()
             );
             TestUtils.waitForBrokersInIsr(client, topicPartition1,
-                    CollectionConverters.asScala(singletonList(broker2)).toSet()
+                    CollectionConverters.asScala(List.of(broker2)).toSet()
             );
         }
 
-        Path topicPartitionPath = tempTopicPartitionFile(asList(topicPartition0, topicPartition1));
+        Path topicPartitionPath = tempTopicPartitionFile(List.of(topicPartition0, topicPartition1));
         String output = ToolsTestUtils.captureStandardOut(() ->
             LeaderElectionCommand.mainNoExit(
                 "--bootstrap-server", cluster.bootstrapServers(),
@@ -308,7 +356,7 @@ public class LeaderElectionCommandTest {
 
     private void createTopic(Admin admin, String topic, Map<Integer, List<Integer>> replicaAssignment) throws ExecutionException, InterruptedException {
         NewTopic newTopic = new NewTopic(topic, replicaAssignment);
-        List<NewTopic> newTopics = singletonList(newTopic);
+        List<NewTopic> newTopics = List.of(newTopic);
         CreateTopicsResult createTopicResult = admin.createTopics(newTopics);
         createTopicResult.all().get();
     }
